NGINX-Ingress-Cert-Manager-TLS-on-Kind-Cluster/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
