NGINX-Ingress-Cert-Manager-TLS-on-Kind-Cluster/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  tls:
  - hosts:
    - example.com
    secretName: sec-example
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
