NGINX-Ingress-Cert-Manager-TLS-on-Kind-Cluster/ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - example.com
    secretName: sec-example
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
